ljudio/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,400;0,700;1,400&display=swap');

html{
  height: 100%;
}

body {
  height: 100%;
  /* display: flex;
  flex-direction: column; */
  font-family: 'Urbanist', sans-serif;
  margin: auto;
}

#root{
  height: 100%;
  display: flex;
  flex-direction: column;
}

main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin: 2vh 0;
}

.container{
  width: 90%;
  margin: auto;
}

/* 
footer{
  display: flex;
  flex-direction: column;
} */

